config layout bug time

--- a/css/config.css
+++ b/css/config.css
@@ -196,7 +196,7 @@ h4{
       height: 30px;
   }
     .inputTime{
-      font-size: 3.5vw;
+      font-size: 3.3vw;
       width: 26%;
     }
 
